Add K 'self type' param to SumType<T, K extends SumType>; Delete (or comment-out for now) use of non-typesafe versions of 'then'/'when'; Use List.of() instead of Arrays.asList()